styles.css
.container {
    display: flex;
    justify-content: space-around;
    margin: 20px;
}

.icon {
    height: 30px;
    width: 130px;
    margin-left: 50px;
}

.search-bar {
    height: 20px;
    width: 480px;
    font-size: 16px;
    padding: 10px;
    border: none;
    border-radius: 4px;
    box-shadow: 2px 2px 8px 0.5px #888888;
}

.btn-search {
    border: none;
    background-color: red;
    box-shadow: 2px 2px 2px black;
    color: white;
    font-weight: bold;
    border-radius: 30px;
    width: 100px;
    cursor: pointer;
}

.btn-search:hover {
    background-color: #ff8080;
    box-shadow: none;
    color: black;
    transition: 1s;
}

.btn {
    border: none;
    border-radius: 30px;
    background-color: yellow;
    color: black;
    box-shadow: 2px 2px 2px black;
    font-size: 18px;
    width: 100px;
    cursor: pointer;
}

.btn:hover {
    background-color:  #ffffb3;
    box-shadow: none;
    transition: 1s;
}

.text {
    font-size: 28px;
    margin-left: 350px;
}

.text-1 {
    font-size: 28px;
    font-weight: bold;
    margin-left: 290px;
}

.product-container {
    display: block;
    margin-left: 90px;
}

.dishes {
    height: 150px;
    width: 150px;
    padding: 33px;
    border-radius: 100px;
}

.order-options {
    padding: 10px;
    margin: 20px;
    width: 100px;
    border: none;
    background-color: red;
    color: white;
    border-radius: 20px;
    font-weight: bold;
    box-shadow: 2px 2px 2px black;
    cursor: pointer;
}

.order-options:hover {
    background-color: #ff8080;
    color: black;
    transition: 0.8s;
    box-shadow: none;
}

.button-container {
    margin-left: 100px;
    margin-top: 20px;
}

